chore: swagger user routes implementation
